# graphql-study

./: .gitignore  README.md  pyproject.toml
app/: __init__.py
app/extensions/database/: __init__.py
app/extensions/graphql/: __init__.py  queries.py  schema.py
app/models/: user.py
scripts/: __init__.py
