[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["masioware <marcioedumartinez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
strawberry-graphql = "^0.112.0"

[tool.poetry.dev-dependencies]
httpie = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
